# ThreeDPrintManager

./: Cargo.toml
migrations/202512250001/: down.sql  up.sql
migrations/202601030001/: down.sql  up.sql
src/: config.rs  db_manager.rs  main.rs
src/models/: file.rs  project.rs  project_source.rs  project_tag.rs
src/pages/: main_view.rs  project.rs  settings.rs
